--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,7 @@
 
 
 body {
-  margin: 0;
-  display: flex;
+  margin: auto 3rem;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
