--- a/src/Style_Components/Nav.css
+++ b/src/Style_Components/Nav.css
@@ -13,35 +13,39 @@
 
 .menu{
     width: 75%;
-    column-gap: 2rem;
 }
 
 .menu-icons{
-    column-gap: 3px;
+    column-gap: 15px;
+    margin-right: 20px;
 }
 
 .nav-logo{
-    height: 1rem;
-    width: 1rem;
+    height: 15px;
+    width: 15px;
 }
 
 .blife-logo{
-    height: 2rem;
-    margin-left: 1rem;
+    height: 35px;
+    margin-left: 20px;
 }
 
 .a-menu{
-    display: flex;
     justify-content: center;
-    font-family: bold;
     text-decoration: none;
-    padding: 0 6px; 
-    width: 70px;   
+    display: flex;
+    font-weight: 700;
+    font-size: 16px;
+    width: 128px;   
+    height: 25px;
 }
 
 .a-menu:hover{
     background-color: #EDA836;
-    border-radius: 40%;
+    border-radius: 22px;
+    width: 128px;
+    height: 25px;
+  
 }
 
 .nav-button{
