--- a/src/Style_Components/Nav.css
+++ b/src/Style_Components/Nav.css
@@ -1,14 +1,13 @@
 .navbar{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns:15% 70% 15%;
     height: auto;
     margin-bottom: 1rem;
 }
 .menu, .menu-icons{
     display: flex;
-    justify-content: center;
+   align-items: center;
+   justify-content: center;
 }
 
 .menu{
@@ -16,6 +15,8 @@
 }
 
 .menu-icons{
+    display: grid;
+    grid-template-columns: 108px 15px 15px;
     column-gap: 15px;
     margin-right: 20px;
 }
@@ -25,9 +26,14 @@
     width: 15px;
 }
 
+.search{ 
+    line-height: 20px;
+    transition:all .7 ease;
+}
+
 .blife-logo{
     height: 35px;
-    margin-left: 20px;
+    margin-left: 0;
 }
 
 .a-menu{
@@ -55,26 +61,32 @@
 }
 
 .container{
-    position: absolute;
-    transform: translate(-50%,-50%);
+    display: grid;
+    grid-template-columns: 85% 15%;
+    transform: translate(0,-8px); 
+    z-index: 100;
 }
 
 .container:hover input{
-    width: 200px;}
+    width: 115px;
+    border: 1px solid hsl(0, 0%, 88%);
+    border-radius: 20px;
+}
 
 input{
     outline: none;
     box-sizing: border-box;
-    border-radius: 20px;
-    border: 1px solid hsl(0, 0%, 88%);
-    transition: all .7s ease;
+    width: 0;
+    height: 100%;
+    transition: all .3s ease; 
+    border: none;
 }
 
 
-.btn{
-    position: absolute;
+.btn img{
     text-align: center;
     cursor: pointer;
-    transition: .5s;
-
+    transition: .4;
 }
+
+       
